--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.1.0",
+    "homepage": "https://github.com/bs15b001/crown-clothing-demo-website",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -16,7 +18,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "deploy": "gh-pages-deploy",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "clean-source": "rimraf README.md src webroot package.json",
     "start": "react-scripts start",
     "build": "react-scripts build",
